--- a/BoardingHouse/app/templetes/admin/addUser.html
+++ b/BoardingHouse/app/templetes/admin/addUser.html
@@ -14,11 +14,6 @@
         <div>
             <label>ЕМБГ:</label>
             <input type="text" ng-class="{ 'has-error' : userForm.Embg.$invalid && !userForm.Embg.$pristine }" name="Embg" class="form-control" ng-model="user.Embg" required>
-
-        </div>
-        <div>
-            <label>Контакт телефон:</label>
-            <input type="text" ng-class="{ 'has-error' : userForm.PhoneNumber.$invalid && !userForm.PhoneNumber.$pristine }" name="PhoneNumber" class="form-control" ng-model="user.PhoneNumber" required>
         </div>
         <div>
             <label>Е-маил:</label>
@@ -26,9 +21,17 @@
         </div>
         <div>
             <label>Лозинка:</label>
-            <input type="text" ng-class="{ 'has-error' : userForm.Password.$invalid && !userForm.Password.$pristine }" name="Password" class="form-control" ng-model="user.Password" required >
+            <input type="text" ng-class="{ 'has-error' : userForm.Password.$invalid && !userForm.Password.$pristine }" name="Password" class="form-control" ng-model="user.Password" required>
         </div>
-        <div class="form-inline" ng-hide="flag">
+        <div>
+            <label>Контакт телефон:</label>
+            <input type="text" name="PhoneNumber" class="form-control" ng-model="user.PhoneNumber">
+        </div>
+        <div>
+            <label>Адреса:</label>
+            <input type="text" name="Address" class="form-control" ng-model="user.Address" required>
+        </div>
+        <div class="form-inline">
             <input type="radio" name="user" value="1" ng-model="user.Role.Id"> Админ<br>
             <input type="radio" name="user" value="2" ng-model="user.Role.Id"> Корисник<br>
         </div>
@@ -36,6 +39,5 @@
 </div>
 <div class="modal-footer">
     <button class="btn btn-success" type="button" ng-click="Save(userForm)">Сними</button>
-    <!--<button class="btn btn-success" type="button" ng-click="Update(userForm)" ng-if="!flag">Сними</button>-->
     <button class="btn btn-danger" type="button" ng-click="cancel()">Откажи</button>
 </div>
