--- a/BoardingHouse/app/templetes/admin/reservations.html
+++ b/BoardingHouse/app/templetes/admin/reservations.html
@@ -19,6 +19,7 @@
                 <td>{{rent.RoomId}}</td>
                 <td>{{rent.Floor}}</td>
                 <td><a ng-click="updateRent(rent)"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
+                <td><a ng-click="addNewBill(rent)"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
             </tr>
         </tbody>
     </table>
