make reservation for period

--- a/BoardingHouse/app/templetes/admin/roomInfoForPeriod.html
+++ b/BoardingHouse/app/templetes/admin/roomInfoForPeriod.html
@@ -25,5 +25,6 @@
     </table>
 </div>
 <div class="modal-footer">
+    <button class="btn btn-success" ng-click="makeReservation()">Резервирај</button>
     <button class="btn btn-info" type="button" ng-click="cancel()">Затвори</button>
 </div>
