--- a/BoardingHouse/app/templetes/admin/reservations.html
+++ b/BoardingHouse/app/templetes/admin/reservations.html
@@ -18,7 +18,7 @@
                 <td>{{rent.DateEnd | jsDate}}</td>
                 <td>{{rent.RoomId}}</td>
                 <td>{{rent.Floor}}</td>
-                <td><a ng-click="updateRent(rent)"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
+                <td><a ng-click="deleteRent(rent)"><i class="fa fa-remove fa-2x" aria-hidden="true"></i></a></td>
                 <td><a ng-click="addNewBill(rent)"><i class="fa fa-pencil-square-o fa-2x" aria-hidden="true"></i></a></td>
             </tr>
         </tbody>
